# FPSLightEngine

./: CMakeLists.txt  README.md
shaders/: blue_fragment_shader.glsl  depth_fs.glsl  light_fragment_shader.glsl  lit_fs.glsl  lit_vs.glsl  vertex_shader.glsl
src/: main.cpp
src/core/: App.cpp  App.hpp  World.hpp
src/ecs/component/: ColliderComponent.hpp  ColorComponent.hpp  GravityComponent.hpp  LightComponent.hpp  MeshComponent.hpp  PlayerComponent.hpp  ShaderComponent.hpp  TransformComponent.hpp
src/ecs/registry/: Registry.hpp
src/ecs/system/: CollisionSystem.hpp  LightSystem.hpp  MovementSystem.hpp  PhysicsSystem.hpp  RendererSystem.hpp
src/input/: Input.cpp  Input.hpp
src/renderer/: Camera.cpp  Camera.hpp
